ADD ajout initiation.js

--- a/initiation/initiation.html
+++ b/initiation/initiation.html
@@ -13,10 +13,12 @@
 
 
 
-    <script>
+    <!-- <script>
         //Ici j'écris en JS
         console.log("Hello, world !")
-    </script>
+    </script> -->
+
+    <script src="initiation.js"></script>
 </body>
 
 </html>
